--- a/flow_market/templates/flow_market/CdaMarketPage.html
+++ b/flow_market/templates/flow_market/CdaMarketPage.html
@@ -66,6 +66,10 @@ CDA Market
         text-align: center;
     }
 
+    input {
+        width: 60px;
+    }
+
     #nextButton {
         display: none;
     }
