--- a/flow_market/templates/flow_market/flo/flo_order_graph.html
+++ b/flow_market/templates/flow_market/flo/flo_order_graph.html
@@ -52,7 +52,7 @@
                 x: {
                     title: {
                         display: true,
-                        text: 'Rate (unit/s)'
+                        text: 'Rate (shares per second)'
                     },
                     type: 'linear',
                     min: 0,
