--- a/flow_market/templates/flow_market/cda/cda_order_book.html
+++ b/flow_market/templates/flow_market/cda/cda_order_book.html
@@ -42,7 +42,7 @@
                 x: {
                     title: {
                         display: true,
-                        text: 'Quantity'
+                        text: 'Quantity (shares)'
                     },
                     type: 'linear',
                     min: 0,
