--- a/flow_market/templates/flow_market/flo/flo_order_book.html
+++ b/flow_market/templates/flow_market/flo/flo_order_book.html
@@ -45,7 +45,7 @@
                 x: {
                     title: {
                         display: true,
-                        text: 'Rate'
+                        text: 'Rate (shares per second)'
                     },
                     type: 'linear',
                     min: 0,
