--- a/flow_market/templates/flow_market/cda/cda_order_book.html
+++ b/flow_market/templates/flow_market/cda/cda_order_book.html
@@ -28,7 +28,7 @@
                     data: []
                 },
                 {
-                    label: 'Transact',
+                    label: 'Recent Trades',
                     pointRadius: [2, 4, 6],
                     backgroundColor: GREEN,
                     borderColor: GREEN,
