--- a/flow_market/templates/flow_market/CdaMarketPage.html
+++ b/flow_market/templates/flow_market/CdaMarketPage.html
@@ -203,6 +203,11 @@ This is round {{player.round_number}}
 
     function liveRecv(data) {
         clearInterval(initialMarketPage);
+        if (data['message_type'] == 'invalid_order') {
+            var htmlContent = "<h1>Invalid Order</h1><p>The order you tried to submit is not pofitable, please make adjustment.</p>";
+            var popupWindow = window.open("", "popupWindow", "width=600,height=400");
+            popupWindow.document.write(htmlContent);
+        }
         if (data['message_type'] == 'update') {
             // Only let id_in_group=1 to send the update request.
             const sendUpdate = setTimeout(function () {
