--- a/flow_market/templates/flow_market/RoundResultPage.html
+++ b/flow_market/templates/flow_market/RoundResultPage.html
@@ -13,7 +13,7 @@ Your results for this round
 </style>
 <table>
     <tr>
-        <th>Round</th>
+        <th>Period</th>
         <th>Practice or Paid</th>
         <!-- <th>Profit from contract</th> -->
         <!-- <th>Profit from trading</th> -->
