--- a/flow_market/templates/flow_market/CdaMarketPage.html
+++ b/flow_market/templates/flow_market/CdaMarketPage.html
@@ -206,11 +206,40 @@ This is a <b>PAID</b> period.
         liveSend({ 'message_type': 'update' });
     }, 1000);
 
+    var popupWindow;
     function liveRecv(data) {
         clearInterval(initialMarketPage);
         if (data['message_type'] == 'invalid_order') {
-            var htmlContent = "<h1>Invalid Order</h1><p>The order you tried to submit is not pofitable, please make adjustment.</p>";
-            var popupWindow = window.open("", "popupWindow", "width=600,height=400");
+            var status = data['status'];
+            var contract_direction = status['contract_direction'];
+            var contract_quantity = status['contract_quantity'];
+            var order_direction = status['order_direction'];
+            var order_quantity = status['order_quantity'];
+            var inventory = status['inventory'];
+            if (popupWindow != null) {
+                popupWindow.close();
+            }
+            var htmlContent = "";
+            if (contract_direction == 'buy') {
+                if (inventory == 0) {
+                    htmlContent = "<h1>Invalid Order</h1><p>You have a buy contract, so you should send a buy order before sending in any sell order.</p>";
+                }
+                else if (order_direction == 'sell') {
+                    htmlContent = "<h1>Invalid Order</h1><p>You have a buy contract and you have only bought " + Math.abs(inventory) + " shares, so you can only send in sell orders with quantity up to " + Math.abs(inventory) + " shares.</p>";
+                } else {
+                    htmlContent = "<h1>Invalid Order</h1><p>You have a buy contract with quantity " + contract_quantity + " shares and you have already bought " + Math.abs(inventory) + " shares, so you can only send in buy orders with quantity no more than " + (contract_quantity - Math.abs(inventory)) + " shares.</p>";
+                }
+            } else {
+                if (inventory == 0) {
+                    htmlContent = "<h1>Invalid Order</h1><p>You have a sell contract, so you should send a sell order before sending in any buy order.</p>";
+                }
+                else if (order_direction == 'buy') {
+                    htmlContent = "<h1>Invalid Order</h1><p>You have a sell contract and you have only sold " + Math.abs(inventory) + " shares, so you can only send in buy orders with quantity up to " + Math.abs(inventory) + " shares.</p>";
+                } else {
+                    htmlContent = "<h1>Invalid Order</h1><p>You have a sell contract with quantity " + contract_quantity + " shares and you have already sold " + Math.abs(inventory) + " shares, so you can only send in sell orders with quantity no more than " + (contract_quantity - Math.abs(inventory)) + " shares.</p>";
+                }
+            }
+            popupWindow = window.open("", "popupWindow", "width=600,height=400");
             popupWindow.document.write(htmlContent);
         }
         if (data['message_type'] == 'update') {
