--- a/flow_market/templates/flow_market/FloBuyerQuizPage.html
+++ b/flow_market/templates/flow_market/FloBuyerQuizPage.html
@@ -14,15 +14,13 @@ Flow Buyer Quiz
 <hr style="height:5px">
 {{ formfield 'flo_buyer_quiz6' }}
 {{ formfield 'flo_buyer_quiz7' }}
-{{ formfield 'flo_buyer_quiz8' }}
 
-<h5>This context applies to the next three questions:</h5>
-<b>Suppose you have a BUY contract for 500 units for $12 per unit that expires at the second 110 (10 seconds before the
-    end of the trading period). That is, the computer is going to BUY from you up to 500 units and pay you $12 per each
-    of those units if you own them at the moment in which the contract expires.</b>
+<h5>This context applies to the next two questions:</h5>
+<b>Suppose you have a BUY contract for 500 shares for $12 per share that expires at the second 119 (1 second before the
+    end of the trading period). That is, the computer is going to BUY from you up to 500 shares and pay you $12 per each
+    of those shares if you own them at the moment in which the contract expires.</b>
 {{ formfield 'flo_buyer_quiz9' }}
 {{ formfield 'flo_buyer_quiz10' }}
-{{ formfield 'flo_buyer_quiz11' }}
 {{ next_button }}
 
 {{ endblock }}
