--- a/flow_market/templates/flow_market/RoundResultPage.html
+++ b/flow_market/templates/flow_market/RoundResultPage.html
@@ -1,7 +1,7 @@
 {% extends "global/Page.html" %}
 {% load otree %}
 {% block title %}
-Your results for this round
+Your results for this period
 {% endblock %}
 {% block content %}
 <style>
