--- a/flow_market/templates/flow_market/FloSellerQuizPage.html
+++ b/flow_market/templates/flow_market/FloSellerQuizPage.html
@@ -14,15 +14,13 @@ Flow Seller Quiz
 <hr style="height:5px">
 {{ formfield 'flo_seller_quiz6' }}
 {{ formfield 'flo_seller_quiz7' }}
-{{ formfield 'flo_seller_quiz8' }}
 
-<h3>This context applies to the next three questions:</h3>
-<b>Suppose you have a SELL contract for 500 units for $8 per unit that expires at the second 110 (10 seconds before the
-    end of the trading period). That is, the computer is going to SELL to you up to 500 units and pay you $8 per each of
-    those units if you have sold by the moment in which the contract expires.</b>
+<h3>This context applies to the next two questions:</h3>
+<b>Suppose you have a SELL contract for 500 shares for $8 per share that expires at the second 119 (1 second before the
+    end of the trading period). That is, the computer is going to SELL to you up to 500 shares and pay you $8 per each of
+    those shares if you have sold by the moment in which the contract expires.</b>
 {{ formfield 'flo_seller_quiz9' }}
 {{ formfield 'flo_seller_quiz10' }}
-{{ formfield 'flo_seller_quiz11' }}
 {{ next_button }}
 
 {{ endblock }}
