--- a/flow_market/templates/flow_market/CdaSellerQuizPage.html
+++ b/flow_market/templates/flow_market/CdaSellerQuizPage.html
@@ -12,8 +12,8 @@ CDA Seller Quiz
 {{ formfield 'cda_seller_quiz4' }}
 
 <h5>This context applies to the next two questions:</h5>
-<b>Suppose you have a SELL contract for 500 shares for $8 per share that expires at the second 119 (1 second before the
-    end of the trading period). That is, the computer is going to SELL to you up to 500 shares and pay you $8 per each of
+<b>Suppose you have a SELL contract for 500 shares for 8 ECUs per share that expires at the second 119 (1 second before the
+    end of the trading period). That is, the computer is going to SELL to you up to 500 shares and pay you 8 ECUs per each of
     those shares if you have sold by the moment in which the contract expires.</b>
 {{ formfield 'cda_seller_quiz5' }}
 {{ formfield 'cda_seller_quiz6' }}
