--- a/flow_market/templates/flow_market/FloBuyerQuizPage.html
+++ b/flow_market/templates/flow_market/FloBuyerQuizPage.html
@@ -16,8 +16,8 @@ Flow Buyer Quiz
 {{ formfield 'flo_buyer_quiz7' }}
 
 <h5>This context applies to the next two questions:</h5>
-<b>Suppose you have a BUY contract for 500 shares for $12 per share that expires at the second 119 (1 second before the
-    end of the trading period). That is, the computer is going to BUY from you up to 500 shares and pay you $12 per each
+<b>Suppose you have a BUY contract for 500 shares for 12 ECUs per share that expires at the second 119 (1 second before the
+    end of the trading period). That is, the computer is going to BUY from you up to 500 shares and pay you 12 ECUs per each
     of those shares if you own them at the moment in which the contract expires.</b>
 {{ formfield 'flo_buyer_quiz9' }}
 {{ formfield 'flo_buyer_quiz10' }}
