--- a/flow_market/templates/flow_market/FloSellerQuizPage.html
+++ b/flow_market/templates/flow_market/FloSellerQuizPage.html
@@ -16,8 +16,8 @@ Flow Seller Quiz
 {{ formfield 'flo_seller_quiz7' }}
 
 <h3>This context applies to the next two questions:</h3>
-<b>Suppose you have a SELL contract for 500 shares for $8 per share that expires at the second 119 (1 second before the
-    end of the trading period). That is, the computer is going to SELL to you up to 500 shares and pay you $8 per each of
+<b>Suppose you have a SELL contract for 500 shares for 8 ECUs per share that expires at the second 119 (1 second before the
+    end of the trading period). That is, the computer is going to SELL to you up to 500 shares and pay you 8 ECUs per each of
     those shares if you have sold by the moment in which the contract expires.</b>
 {{ formfield 'flo_seller_quiz9' }}
 {{ formfield 'flo_seller_quiz10' }}
